--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-eslint": "^8.2.6",
     "eslint-config-react-native": "^3.0.0",
     "eslint-plugin-react": "^7.10.0",
